--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="/styles.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  <link href="/styles.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script src="/main.js" defer></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TLS verifier</title>
+  <script src="/main.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TLS verifier</title>
 </head>
+
 <body>
   <div class="container">
     <div class="row">
@@ -47,7 +49,8 @@
               <label for="idPrivateKeystorePath" class="form-label">Keystore path</label>
             </div>
             <div class="col-8">
-              <input type="text" class="form-control" id="idPrivateKeystorePath" placeholder="Keystore file" value="/home/kjetil/Code/tauri-app/src-tauri/client.p12">
+              <input type="text" class="form-control" id="idPrivateKeystorePath" placeholder="Keystore file"
+                value="/home/kjetil/Code/tauri-app/src-tauri/client.p12">
             </div>
           </div>
           <div class="row">
@@ -55,7 +58,8 @@
               <label for="idPrivateKeystorePassword" class="form-label">Keystore password</label>
             </div>
             <div class="col-8">
-              <input type="text" class="form-control" id="idPrivateKeystorePassword" placeholder="Keystore password" value="password">
+              <input type="text" class="form-control" id="idPrivateKeystorePassword" placeholder="Keystore password"
+                value="password">
             </div>
           </div>
           <div class="row">
@@ -63,7 +67,8 @@
               <label for="idPPublicCertificatePath" class="form-label">Public certificate path</label>
             </div>
             <div class="col-8">
-              <input type="text" class="form-control" id="idPPublicCertificatePath" placeholder="Public certificate file" value="/home/kjetil/Code/tauri-app/src-tauri/server.cer">
+              <input type="text" class="form-control" id="idPPublicCertificatePath"
+                placeholder="Public certificate file" value="/home/kjetil/Code/tauri-app/src-tauri/server.cer">
             </div>
           </div>
           <div class="row">
@@ -72,7 +77,8 @@
             </div>
             <div class="col-8">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" class="form-control" id="idCheckHostname" value="true" checked>
+                <input class="form-check-input" type="checkbox" class="form-control" id="idCheckHostname" value="true"
+                  checked>
               </div>
             </div>
           </div>
@@ -82,7 +88,8 @@
             </div>
             <div class="col-8">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" class="form-control" id="idUseInbuildRootCerts" value="true">
+                <input class="form-check-input" type="checkbox" class="form-control" id="idUseInbuildRootCerts"
+                  value="true">
               </div>
             </div>
           </div>
@@ -92,25 +99,27 @@
             </div>
             <div class="col-8">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" class="form-control" id="idHttpsOnly" value="true" checked>
+                <input class="form-check-input" type="checkbox" class="form-control" id="idHttpsOnly" value="true"
+                  checked>
               </div>
             </div>
-          </div>          
+          </div>
           <div class="row">
             <div class="col-4">
               <label for="idUseTlsSni" class="form-check-label">Tls sni</label>
             </div>
             <div class="col-8">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" class="form-control" id="idUseTlsSni" value="true" checked>
+                <input class="form-check-input" type="checkbox" class="form-control" id="idUseTlsSni" value="true"
+                  checked>
               </div>
             </div>
-          </div>          
+          </div>
         </div>
       </div>
       <div class="col-6">
         <div id="logdata">
-        
+
         </div>
       </div>
     </div>
